Prevent scanning for new images in parallel

Add a mutex to prevent the user from starting a scan for new images
while another scan is still running.
This fixes a failed assertion if assertions are enabled, and potential
database corruption if assertions are not enabled.

BUG: 475529